Add libpng and curl as build and runtime dependencies

--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -27,6 +27,8 @@ requirements:
     - gdal
     - libiconv
     - hdfeos5 
+    - libpng
+    - curl
 
   run:
     - libgcc
@@ -45,6 +47,8 @@ requirements:
     - gdal
     - libiconv
     - hdfeos5
+    - libpng
+    - curl
 
 test:
   requires:
