changes to allow CentOS 7 build

--- a/libiconv/meta.yaml
+++ b/libiconv/meta.yaml
@@ -6,6 +6,8 @@ source:
   fn: libiconv-1.14.tar.gz
   url:  http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.14.tar.gz
   md5: e34509b1623cec449dfeb73d7ce9c6c6
+  patches:
+    - patch1.patch
 
 build:
   number: 0
