--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -54,5 +54,5 @@ test:
   imports:
     - Nio
   commands:
-    - cd $SRC_DIR/test && nosetests -s
+    - cd $SRC_DIR/test && for file in `cat testfiles`; do echo $file ; nosetests $file ; done |tee pynio-test.log
 
