--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -6,7 +6,7 @@ source:
   path: ../src/pynio-1.4.2
 
 build:
-  number: 3
+  number: 4
   detect_binary_files_with_prefix: true
 
 requirements:
@@ -54,6 +54,5 @@ test:
   imports:
     - Nio
   commands:
-#    - cd $SRC_DIR/test && nosetests -s --ignore-files '.*opendap.*'
-    - cd $SRC_DIR/test && nosetests -s 
+    - cd $SRC_DIR/test && for file in `cat testfiles`; do echo $file ; nosetests $file ; done |tee pynio-test.log
 
