--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -17,7 +17,7 @@ requirements:
     - zlib
     - hdf4
     - hdf5
-    - numpy
+    - numpy x.x
     - gcc
     - python
     - libnetcdf
@@ -35,7 +35,7 @@ requirements:
     - jasper
     - jpeg
     - zlib
-    - numpy
+    - numpy x.x
     - python
     - libnetcdf
     - hdf5
