--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -6,7 +6,7 @@ source:
   path: ../src/pynio-1.5.0-beta
 
 build:
-  number: 2
+  number: 3
   detect_binary_files_with_prefix: true
 
 requirements:
@@ -17,7 +17,7 @@ requirements:
     - zlib
     - hdf4
     - hdf5
-    - numpy
+    - numpy x.x
     - gcc
     - python
     - libnetcdf
@@ -35,7 +35,7 @@ requirements:
     - jasper
     - jpeg
     - zlib
-    - numpy
+    - numpy x.x
     - python
     - libnetcdf
     - hdf5
