--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -7,7 +7,7 @@ source:
   git_rev: 1.4.3
 
 build:
-  number: 1
+  number: 2
   detect_binary_files_with_prefix: true
 
 requirements:
@@ -25,7 +25,7 @@ requirements:
     - proj4
     - hdfeos2
     - g2clib
-    - gdal
+    - libgdal
     - libiconv
     - hdfeos5 
     - curl
@@ -44,7 +44,7 @@ requirements:
     - proj4
     - hdfeos2
     - g2clib
-    - gdal
+    - libgdal
     - libiconv
     - hdfeos5
     - curl
