--- a/pynio/meta.yaml
+++ b/pynio/meta.yaml
@@ -1,13 +1,13 @@
 package:
   name: pynio
-  version: "1.5.0beta"
+  version: {{ GIT_DESCRIBE_TAG }} 
 
 source:
   git_url: https://github.com/NCAR/pynio.git
   git_rev: master
 
 build:
-  number: 8
+  number: 0
   detect_binary_files_with_prefix: true
 
 requirements:
