Split libgdal for different netcdf versions
There are now 4 libgdal recipes.

The netcdf 4.3.3.1 recipes are intended for older packages on the ncar channel,
the 4.4.0 recipes are for newer/dev packages on Dave's conda channel.

--- a/libgdal_geos342_ncdf4331/meta.yaml
+++ b/libgdal_geos342_ncdf4331/meta.yaml
@@ -8,17 +8,17 @@ source:
   md5: 573865f3f59ba7b4f8f4cddf223b52a5
 
 build:
-  number: 2
-  string: geos333_2
+  number: 0
+  string: geos342_ncdf4331_0
 
 requirements:
   build:
     - hdf4
     - hdf5
-    - geos 3.3.3
+    - geos 3.4.2
     - proj4
     - xerces-c
-    - libnetcdf
+    - libnetcdf 4.3.3.1
     - kealib
     - libpng
     - gcc
@@ -26,10 +26,10 @@ requirements:
   run:
     - hdf4
     - hdf5
-    - geos 3.3.3
+    - geos 3.4.2
     - proj4
     - xerces-c
-    - libnetcdf
+    - libnetcdf 4.3.3.1
     - kealib
     - libpng
     - gcc
